<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="10dp"
        android:orientation="vertical"

        tools:context=".MainActivity">

    <TextView
            android:text="@string/plain_crud_app"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/textView2" app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp" android:layout_marginTop="80dp" app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintHorizontal_bias="0.0" android:textSize="24sp" android:layout_marginBottom="53dp"
            app:layout_constraintBottom_toTopOf="@+id/imageView"
            android:gravity="center"
            android:textStyle="bold" app:layout_constraintVertical_bias="0.532"/>
    <Button
            android:text="@string/create_data"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btnCreate" app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="28dp"
            android:layout_marginStart="28dp"
            android:layout_marginTop="64dp" app:layout_constraintTop_toBottomOf="@+id/imageView"/>
    <Button
            android:text="@string/read_data"
            android:layout_width="117dp"
            android:layout_height="47dp"
            android:id="@+id/btnRead" app:layout_constraintStart_toEndOf="@+id/btnCreate"
            android:layout_marginLeft="24dp" android:layout_marginStart="24dp" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" android:layout_marginRight="8dp" app:layout_constraintHorizontal_bias="0.0"
            android:layout_marginTop="65dp" app:layout_constraintTop_toBottomOf="@+id/imageView"/>
    <Button
            android:text="@string/update_data"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btnUpdate" android:layout_marginTop="24dp"
            app:layout_constraintTop_toBottomOf="@+id/btnCreate" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="28dp" android:layout_marginStart="28dp"/>
    <Button
            android:text="@string/delete_data"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btnDelete" app:layout_constraintStart_toEndOf="@+id/btnUpdate"
            android:layout_marginLeft="20dp" android:layout_marginStart="20dp" android:layout_marginTop="24dp"
            app:layout_constraintTop_toBottomOf="@+id/btnRead"/>
    <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" app:srcCompat="@drawable/crud"
            android:id="@+id/imageView" app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="28dp"
            android:layout_marginStart="28dp" android:layout_marginTop="88dp"
            app:layout_constraintTop_toTopOf="parent"/>
    <TextView
            android:text="@string/sharedpreferences_example"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView9" app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp" android:layout_marginTop="17dp"
            app:layout_constraintTop_toBottomOf="@+id/imageView" android:layout_marginBottom="28dp"
            app:layout_constraintBottom_toTopOf="@+id/btnCreate" android:gravity="center" tools:textSize="18sp"
            android:textStyle="bold"/>
</android.support.constraint.ConstraintLayout>